MyOrg/src/objects/Fields_Config__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Fields Config</relationshipLabel>
        <relationshipName>Fields_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salutationis</fullName>
                </value>
                <value>
                    <fullName>firstNameis</fullName>
                </value>
                <value>
                    <fullName>Lastnameis</fullName>
                </value>
                <value>
                    <fullName>jobCategoryis</fullName>
                </value>
                <value>
                    <fullName>jobtitleis</fullName>
                </value>
                <value>
                    <fullName>Address1is</fullName>
                </value>
                <value>
                    <fullName>Cityis</fullName>
                </value>
                <value>
                    <fullName>stateis</fullName>
                </value>
                <value>
                    <fullName>PostalCodeis</fullName>
                </value>
                <value>
                    <fullName>Phoneis</fullName>
                </value>
                <value>
                    <fullName>MobilePhoneis</fullName>
                </value>
                <value>
                    <fullName>Emailis</fullName>
                </value>
                <value>
                    <fullName>Companyis</fullName>
                </value>
                <value>
                    <fullName>HeadoftheCompanyis</fullName>
                </value>
                <value>
                    <fullName>HeadoftheCompanyTitleis</fullName>
                </value>
                <value>
                    <fullName>FormofOrganizationis</fullName>
                </value>
                <value>
                    <fullName>Websiteis</fullName>
                </value>
                <value>
                    <fullName>Numberofyearsinbusinessis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner_sectionTab</fullName>
                </value>
                <value>
                    <fullName>ContactTab</fullName>
                </value>
                <value>
                    <fullName>CompanyTab</fullName>
                </value>
                <value>
                    <fullName>FocusTab</fullName>
                </value>
                <value>
                    <fullName>SegmentTab</fullName>
                </value>
                <value>
                    <fullName>ServiceTab</fullName>
                </value>
                <value>
                    <fullName>CompleteTab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>Fields Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Fields Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>